fix footer align over 1200px

--- a/programmers-challenges/style.css
+++ b/programmers-challenges/style.css
@@ -456,8 +456,9 @@ footer {
     margin: 0 auto;
     max-width: 1200px;
   }
-  .footer-wrap {
-    margin: 0 auto;
+
+  footer {
     max-width: 1200px;
+    margin: 0 auto;
   }
 }
